# CPyS-891

./: Add_CPyS-891.py  CPyS.cfg  CPyS_891.py  README.md  const.py  py891_CPS.py  pyproject.toml  requirements.txt  startCPyS.bat  test_1.py  test_2.py
src/: main.py
src/py891/: rig.py
